connected mongoDB, added controllers, models and routes to get and post messages

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+MONGO = mongodb+srv://sonuk:uGZUTLo7l9IimQSJ@cluster0.axdh81c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
