--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "mongoose": "^8.4.1"
   }
 }
