--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nodemon": "^3.1.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1"
   }
 }
